[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gjf_editor"
version = "0.1.0"
description = "Editor de Keywords Gaussian com interface wizard"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Seu Nome", email = "seu.email@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Utilities",
]

dependencies = [
    "questionary>=2.1.1",
    "rich>=14.3.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/gjf_editor"
Repository = "https://github.com/seu-usuario/gjf_editor.git"

[project.scripts]
gjf-editor = "gjf_editor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gjf_editor"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py312']
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "questionary.*",
    "rich.*",
    "click.*",
]
ignore_missing_imports = true